frontend/tests/cases/negative/interfaces/scope/notInScopeInterfaceAsConstraintToInstanceMulti.gr
interface Simple a

interface Simple1 a

data SimpleDT a = SDT

-- interface Simple2 is not in scope
instance {Simple1 a, Simple2 a} => Simple (SimpleDT a)
